--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
   </head>
 
   <body>
-
+    <% if user_signed_in? %>
+      <%= link_to link_to 'Sign Out', destroy_user_session_path, method: :delete %>
+      <h1>Welcome <%=current_user.name %> </h1>
+    <%end%>
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
     <%= yield %>
