--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @category, url: categories_path , method: :post, local: true do |f|%>
+<%= form_for @category do |f|%>
 <div class="form-card">
   <div>
     <%= f.label :name %>
