--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,6 +8,7 @@
      Category: <%= category.name %> Total: <%=category.total%>
      <%= link_to "Edit", edit_category_path(category.id)%>
      <%= button_to "Delete", category_path(category.id), method: :delete, data: { turbo_confirm: "Are you sure you want to delete #{category.name}"}%>
+     <%= link_to "Details", category_expenditures_path(category.id)  %>
     </div>
   </li>
 
