--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,9 @@
 <h1>List all Categories</h1>
 
 <ul>
+<div>Total Amount Spent: <%= @total%> </div>
 <%@categories.each do |category| %>
+ 
 
  <li>
    <div>
