--- a/app/views/expenditures/index.html.erb
+++ b/app/views/expenditures/index.html.erb
@@ -1,14 +1,19 @@
 <h1>Expenditures</h1>
+
 <h3>Category Total: $<%=@category.total %></h3>
+
 <ul>
  
   <% @expenditures.each do |expense| %>  
+  <% if can? :read, expense %>
+  
     <li>
     Date: <%= expense.created_at.strftime("%d/%m/%Y") %>
     Name: <%= expense.name%> 
     Amount: <%= expense.amount%>
     <%= button_to 'Delete', category_expenditure_path(@category.id, expense.id), method: :delete, data: { turbo_confirm: "Are you sure you want to delete #{expense.name}?"} %>
     </li>
+    <%end%>
   <% end %>
 </ul>
 
