--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -13,6 +13,7 @@
      <%= link_to "Edit", edit_category_path(category.id)%>
      <%= button_to "Delete", category_path(category.id), method: :delete, data: { turbo_confirm: "Are you sure you want to delete #{category.name}"}%>
      <%= link_to "Details", category_expenditures_path(category.id)  %>
+     <%= link_to "Add Expense", new_category_expenditure_path(category.id) %>
     </div>
   </li>
 <% end %>
