Update categories index page

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -13,6 +13,9 @@
   <div>
     <%= f.submit %>
   </div>
-  </div>
+
+  <button>
+    <%= link_to 'Cancel', categories_path %>
+  </button>
 
 <% end %>
