--- a/app/views/expenditures/new.html.erb
+++ b/app/views/expenditures/new.html.erb
@@ -16,6 +16,10 @@
   <div>
     <%= f.submit 'Add Expense' %>
   </div>
+
+  <button>
+    <%= link_to 'Cancel', category_expenditures_path %>
+  </button>
   </div>
 
 <% end %>
