--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,18 +1,18 @@
-<h1>List all Expense Categories</h1>
+<h1>Transaction Categories</h1>
 
 
 <ul>
 
-<div>Total Amount Spent: <%= @total%> </div>
+<div>Total Spent: <%= @total%> </div>
 
 <%@categories.each do |category| %>
  <% if can? :read, category %>
   <li>
    <div>
-     Category: <%= category.name %> Total: <%=category.total%>
+     Category: <%= category.name %> Total: $<%=category.total%>
      <%= link_to "Edit", edit_category_path(category.id)%>
-     <%= button_to "Delete", category_path(category.id), method: :delete, data: { turbo_confirm: "Are you sure you want to delete #{category.name}"}%>
-     <%= link_to "Details", category_expenditures_path(category.id)  %>
+     <%= button_to "Remove", category_path(category.id), method: :delete, data: { turbo_confirm: "Are you sure you want to delete #{category.name}"}%>
+     <%= link_to "View Details", category_expenditures_path(category.id)  %>
      <%= link_to "Add Expense", new_category_expenditure_path(category.id) %>
     </div>
   </li>
