--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -9,6 +9,9 @@
  <% if can? :read, category %>
   <li>
    <div>
+   <div>
+     <%= image_tag category.icon, alt: 'icon' %>
+  </div>
      Category: <%= category.name %> Total: $<%=category.total%>
      <%= link_to "Edit", edit_category_path(category.id)%>
      <%= button_to "Remove", category_path(category.id), method: :delete, data: { turbo_confirm: "Are you sure you want to delete #{category.name}"}%>
