--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Edit category<h1>
+<h1 class='text-center text-gray-900 font-bold'>Edit category<h1>
 
 <%= render 'form', category: @category %>
