--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Add New category</h1>
+<h1 class='text-center text-gray-900 font-bold'>Add New category</h1>
 
 <%= render 'form', category: @category %>
