--- a/app/views/expenditures/new.html.erb
+++ b/app/views/expenditures/new.html.erb
@@ -1,30 +1,35 @@
-<h1>Add an Expenses</h1>
+<section  class='flex flex-col justify-center items-center'>
+<h1 class='text-center text-gray-900 font-bold'>Add an Expenses</h1>
 
-
+<div class="w-full max-w-xs">
 <%= form_with model: @expenditure, url: category_expenditures_path, method: :post, local: true do |f|%>
 <div class="form-card">
   <div>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.label :name, class: "block text-gray-700 text-m font-bold mb-2" %>
+    <%= f.text_field :name, class:"shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
   </div><br>
 
-  <div>
-    <%= f.label :amount %>
-    <%= f.number_field :amount, step: 0.01 %>
+  <div class="field mb-4">
+    <%= f.label :amount, class: "block text-gray-700 text-m font-bold mb-2" %>
+    <%= f.number_field :amount, step: 0.01, class:"shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
   </div><br>
 
-  <div>
-    <%= f.label :category %>
-    <%= f.collection_select :category_id, Category.where("id = ?", params[:category_id] ).order(:name), :id, :name %>
+  <div class="field mb-4">
+    <%= f.label :category, class: "block text-gray-700 text-m font-bold mb-2" %>
+    <%= f.collection_select :category_id, 
+    Category.where("id = ?", params[:category_id] ).order(:name), :id, :name, class:"shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
   </div>
 
-  <div>
-    <%= f.submit 'Add Expense' %>
-  </div>
+  <div class="flex items-center justify-between mb-4">
+    <%= f.submit 'Add Expense', class:"bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
 
-  <button>
-    <%= link_to 'Cancel', category_expenditures_path %>
+    <button>
+    <%= link_to 'Cancel', :back, class:"bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
   </button>
+
+  </div>
+
+  
   </div>
 
 <% end %>
