--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,18 +5,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" >
+     <script src="https://cdn.tailwindcss.com"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <%= link_to link_to 'Sign Out', destroy_user_session_path, method: :delete %>
-      <h1>Welcome <%=current_user.name %> </h1>
-    <%end%>
-   <p class="notice"><%= notice %></p>
-   <p class="alert"><%= alert %></p>
+    <%= render 'layouts/navbar' %>
+    <div class="msg-container">
+      <% flash.each do |key, value| %>
+        <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
+   
+   </div>
     <%= yield %>
   </body>
 </html>
