Update rspec test

--- a/app/views/expenditures/index.html.erb
+++ b/app/views/expenditures/index.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="flex justify-center items-center flex-col mb-10">
-   <h1 class="text-5xl">Transanction Details</h1>
+   <h1 class="text-5xl">Transaction Details</h1>
    <span>Total amount spent on <%= @category.name%>: $<%=@category.total %></span>
 </div>
 
